--- a/index.html
+++ b/index.html
@@ -468,8 +468,8 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-3">
                     <p class="section-title text-white h5 mb-4">Address<span></span></p>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>Istanbul , Essenyurt , Pinar Mah , ak towers</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+90 552 876 53 65</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>Mozdalifa , Marrakech</p>
+                    <p><i class="fa fa-phone-alt me-3"></i>+212638708144</p>
                     <p><i class="fa fa-envelope me-3"></i>boosterpronet@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href="https://twitter.com/boosterpro8"><i class="fab fa-twitter"></i></a>
